public/main.css
/* ... */
#skills-section .skill-content {
  position: absolute;
  top: 55%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
          transform: translate(-50%, -50%);
}

#skills-section .action-link {
  margin-top: 2em !important;
}

#skills-section .skills-section h2 {
  font-size: 2rem;
  color: #66b8fd;
  opacity: 0.95;
  margin-left: 3.5em;
}

#skills-section .skills-text {
  text-align: center;
  color: #66b8fd;
  opacity: 0.75;
  font-size: 2em;
  -webkit-transform: rotate(90deg);
          transform: rotate(90deg);
  position: absolute;
  right: -2%;
  top: 45%;
}

#skills-section .skills-wrapper {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-evenly;
      -ms-flex-pack: space-evenly;
          justify-content: space-evenly;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
}

#skills-section .skills-wrapper h1 {
  font-size: 75px;
  color: #151515;
}

#skills-section .skills-wrapper .wrapper-icon {
  margin: auto 0;
  padding: 0 10px;
}

#skills-section .skills-wrapper .wrapper-icon div {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

#skills-section .skills-wrapper .wrapper-icon label {
  display: block;
  text-align: center;
  color: #dedddd;
}

#skills-section .skills-wrapper .wrapper-icon .skill-icon {
  max-width: 100%;
  height: clamp(50px, 5vw, 80px);
  width: clamp(50px, 5vw, 80px);
  margin: auto;
  -webkit-transition: ease-in-out 0.2s;
  transition: ease-in-out 0.2s;
}

#skills-section .skills-wrapper .wrapper-icon .icon-hovered {
  -webkit-transform: scale(1.15);
          transform: scale(1.15);
}

#landing-section {
  background: url("./bg/topography.png");
}

#landing-section .bg-clipper {
  height: 100%;
  background: url("./bg/cartographer.png");
  /*
			Width:700
			Height:125
			Offset:105
			Amplitude:10
			Frequency:3
		*/
  -webkit-clip-path: polygon(100% 0%, 0% 0%, 0% 92%, 1% 91.99%, 2% 91.96%, 3% 91.92%, 4% 91.86%, 5% 91.77%, 6% 91.68%, 7% 91.56%, 8% 91.43%, 9% 91.28%, 10% 91.11%, 11% 90.93%, 12% 90.73%, 13% 90.52%, 14% 90.29%, 15% 90.04%, 16% 89.79%, 17% 89.52%, 18% 89.24%, 19% 88.94%, 20% 88.64%, 21% 88.32%, 22% 88%, 23% 87.66%, 24% 87.32%, 25% 86.97%, 26% 86.61%, 27% 86.25%, 28% 85.88%, 29% 85.51%, 30% 85.13%, 31% 84.76%, 32% 84.38%, 33% 83.99%, 34% 83.61%, 35% 83.23%, 36% 82.86%, 37% 82.48%, 38% 82.11%, 39% 81.74%, 40% 81.38%, 41% 81.02%, 42% 80.67%, 43% 80.33%, 44% 79.99%, 45% 79.67%, 46% 79.35%, 47% 79.05%, 48% 78.76%, 49% 78.47%, 50% 78.2%, 51% 77.95%, 52% 77.71%, 53% 77.48%, 54% 77.27%, 55% 77.07%, 56% 76.89%, 57% 76.72%, 58% 76.57%, 59% 76.44%, 60% 76.32%, 61% 76.22%, 62% 76.14%, 63% 76.08%, 64% 76.04%, 65% 76.01%, 66% 76%, 67% 76.01%, 68% 76.04%, 69% 76.08%, 70% 76.15%, 71% 76.23%, 72% 76.33%, 73% 76.44%, 74% 76.58%, 75% 76.73%, 76% 76.89%, 77% 77.08%, 78% 77.28%, 79% 77.49%, 80% 77.72%, 81% 77.96%, 82% 78.22%, 83% 78.49%, 84% 78.77%, 85% 79.06%, 86% 79.37%, 87% 79.69%, 88% 80.01%, 89% 80.35%, 90% 80.69%, 91% 81.04%, 92% 81.4%, 93% 81.76%, 94% 82.13%, 95% 82.5%, 96% 82.88%, 97% 83.25%, 98% 83.63%, 99% 84.02%, 100% 84.4%);
          clip-path: polygon(100% 0%, 0% 0%, 0% 92%, 1% 91.99%, 2% 91.96%, 3% 91.92%, 4% 91.86%, 5% 91.77%, 6% 91.68%, 7% 91.56%, 8% 91.43%, 9% 91.28%, 10% 91.11%, 11% 90.93%, 12% 90.73%, 13% 90.52%, 14% 90.29%, 15% 90.04%, 16% 89.79%, 17% 89.52%, 18% 89.24%, 19% 88.94%, 20% 88.64%, 21% 88.32%, 22% 88%, 23% 87.66%, 24% 87.32%, 25% 86.97%, 26% 86.61%, 27% 86.25%, 28% 85.88%, 29% 85.51%, 30% 85.13%, 31% 84.76%, 32% 84.38%, 33% 83.99%, 34% 83.61%, 35% 83.23%, 36% 82.86%, 37% 82.48%, 38% 82.11%, 39% 81.74%, 40% 81.38%, 41% 81.02%, 42% 80.67%, 43% 80.33%, 44% 79.99%, 45% 79.67%, 46% 79.35%, 47% 79.05%, 48% 78.76%, 49% 78.47%, 50% 78.2%, 51% 77.95%, 52% 77.71%, 53% 77.48%, 54% 77.27%, 55% 77.07%, 56% 76.89%, 57% 76.72%, 58% 76.57%, 59% 76.44%, 60% 76.32%, 61% 76.22%, 62% 76.14%, 63% 76.08%, 64% 76.04%, 65% 76.01%, 66% 76%, 67% 76.01%, 68% 76.04%, 69% 76.08%, 70% 76.15%, 71% 76.23%, 72% 76.33%, 73% 76.44%, 74% 76.58%, 75% 76.73%, 76% 76.89%, 77% 77.08%, 78% 77.28%, 79% 77.49%, 80% 77.72%, 81% 77.96%, 82% 78.22%, 83% 78.49%, 84% 78.77%, 85% 79.06%, 86% 79.37%, 87% 79.69%, 88% 80.01%, 89% 80.35%, 90% 80.69%, 91% 81.04%, 92% 81.4%, 93% 81.76%, 94% 82.13%, 95% 82.5%, 96% 82.88%, 97% 83.25%, 98% 83.63%, 99% 84.02%, 100% 84.4%);
}

#contact-section {
  height: 100.1vh !important;
  background: -webkit-gradient(linear, left top, left bottom, color-stop(50%, #f1f1f1), color-stop(50%, #151515));
  background: linear-gradient(to bottom, #f1f1f1 50%, #151515 50%);
}
/* ... */

